set basic ratio styles for tools component

--- a/src/style/homescreen.scss
+++ b/src/style/homescreen.scss
@@ -16,4 +16,19 @@ body {
     background-color: red;
     width: 100vw;
     height: 30vh;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+
+    .pics{
+        background-color: blue;
+        
+    }
+
+    .clip-art{
+        background-color: green;
+    }
+
+    .fonts {
+        background-color: yellow;
+    }
 }
