--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,2 +1,5 @@
 @import './homescreen.scss';
-@import './tools.scss'
+@import './tools.scss';
+@import './pics.scss';
+@import './fonts.scss';
+@import './clip-art.scss';
