testing pics box and search input styling. WOK

--- a/src/style/pics.scss
+++ b/src/style/pics.scss
@@ -1,4 +1,14 @@
-.pics{
+.pics-container{
     background-color: blue;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+
+    .imginput {
+        width: 60%;
+       
+    }
     
 }
+
+
