adjusted component styles

--- a/src/style/clip-art.scss
+++ b/src/style/clip-art.scss
@@ -1,3 +1,6 @@
 .clip-art{
-    background-color: green;
+    background-color: pink;
+    width: 6em;
+    height: 6em;
+    border-radius: 200px;
 }
