--- a/src/style/pics.scss
+++ b/src/style/pics.scss
@@ -1,14 +1,8 @@
-.pics-container{
-    background-color: blue;
-    display: flex;
-    align-items: flex-end;
-    justify-content: center;
-
-    .imginput {
-        width: 60%;
-       
-    }
+.pics-container {
+    background-color: pink;
+    width: 6em;
+    height: 6em;
+    border-radius: 200px;
     
 }
-
 
