--- a/src/style/fonts.scss
+++ b/src/style/fonts.scss
@@ -1,3 +1,6 @@
-.fonts {
-    background-color: yellow;
+.fonts-container {
+    background-color: pink;
+    width: 6em;
+    height: 6em;
+    border-radius: 200px;
 }
