--- a/src/style/clip-art.scss
+++ b/src/style/clip-art.scss
@@ -1,6 +1,6 @@
 .clip-art{
     background-color: pink;
-    width: 6em;
-    height: 6em;
-    border-radius: 200px;
+    width: 4em;
+    height: 4em;
+    border-radius: 100%;
 }
