--- a/src/style/fonts.scss
+++ b/src/style/fonts.scss
@@ -1,6 +1,7 @@
 .fonts-container {
     background-color: pink;
-    width: 6em;
-    height: 6em;
-    border-radius: 200px;
+    width: 4em;
+    height: 4em;
+    border-radius: 100%;
+    margin-right: 10px;
 }
