--- a/src/style/homescreen.scss
+++ b/src/style/homescreen.scss
@@ -1,15 +1,22 @@
-
-
 body {
-    margin: 0;
-    padding: 0;
-    
+    margin: 0px;
 }
 
-.work-station-wrapper {
-    height: 87vh;
-    width: 100vw;
+.home-screen-wrapper {
+    background-color: red;
+    height: 100vh;
+
+    .work-station-wrapper {
+        height: 87vh;
+        width: 100vw;
+    }
+
+    .tools {
+        height: Calc(100vh - 87vh);
+    }
 }
+
+
 
 
    
