--- a/src/style/pics.scss
+++ b/src/style/pics.scss
@@ -1,8 +1,9 @@
 .pics-container {
     background-color: pink;
-    width: 6em;
-    height: 6em;
-    border-radius: 200px;
+    width: 4em;
+    height: 4em;
+    border-radius: 100%;
+    margin-left: 10px;
     
 }
 
