--- a/src/style/tools.scss
+++ b/src/style/tools.scss
@@ -1,8 +1,8 @@
 .tools {
-    width: 100vw;
+
     display: flex;
-    justify-content: space-around;
-    
+    justify-content: space-between;
+    align-items: center;
     
     
 }
