--- a/src/style/clip-art.scss
+++ b/src/style/clip-art.scss
@@ -3,4 +3,13 @@
     width: 5em;
     height: 5em;
     border-radius: 100%;
+    margin-right: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .icon {
+        font-size: 2em;
+    }
+    
 }
