--- a/src/style/pics.scss
+++ b/src/style/pics.scss
@@ -4,6 +4,12 @@
     height: 5em;
     border-radius: 100%;
     margin-left: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     
+    .pics {
+        font-size: 2em;
+    }
 }
 
