color styles and border test added

--- a/src/style/homescreen.scss
+++ b/src/style/homescreen.scss
@@ -6,7 +6,8 @@ body {
 }
 
 .home-screen-wrapper {
-    background-color: red;
+    background-color: #E7E7E7;
+    border: 5px solid #CACACA;
     height: 100vh;
 
     .work-station-wrapper {
