adjusting height test and added boxshadows to buttons

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,7 +1,10 @@
-
 @import './homescreen.scss';
 @import './tools.scss';
 @import './pics.scss';
 @import './fonts.scss';
 @import './clip-art.scss';
+
+html, body {
+    height: 100%;
+}
 
