--- a/src/style/fonts.scss
+++ b/src/style/fonts.scss
@@ -6,9 +6,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    -webkit-box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.75);
+box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.75);
 
     .font {
         font-size: 2em;
         color: #969696;
+   
     }
 }
