--- a/src/style/homescreen.scss
+++ b/src/style/homescreen.scss
@@ -22,6 +22,8 @@ body {
 
     .tools {
         height: Calc(100vh - 87vh);
+        margin-bottom: 50px;
+        border-bottom:5px solid #CACACA; 
     }
 }
 
