--- a/src/style/homescreen.scss
+++ b/src/style/homescreen.scss
@@ -14,6 +14,8 @@ body {
     background-color: #E7E7E7;
     border: 5px solid #CACACA;
     min-height: -webkit-fill-available;
+    position: fixed;
+    
 
     .work-station-wrapper {
         height: 87vh;
