Finally got browser window heights for mobile correct. BIG DEAL

--- a/src/style/homescreen.scss
+++ b/src/style/homescreen.scss
@@ -20,16 +20,12 @@ body {
 
     
 
-    // .work-station-wrapper {
-    //     height: 87vh;
-    //     // width: 100vw;
-    // }
-
-    // .tools {
-    //     height: Calc(100vh - 87vh);
+    .work-station-wrapper {
+        height: 87vh;
         
-    // }
+    }
 }
+   
 
 
 
