--- a/src/style/homescreen.scss
+++ b/src/style/homescreen.scss
@@ -11,19 +11,20 @@ body {
 }
 
 .home-screen-wrapper {
+    display: flex;
     background-color: #E7E7E7;
     border: 5px solid #CACACA;
-    
+    align-items: flex-end;
     min-height: -webkit-fill-available;
     position: fixed;
     min-width: -webkit-fill-available;
 
     
 
-    .work-station-wrapper {
-        height: 87vh;
+    // .work-station-wrapper {
+    //     height: 87vh;
         
-    }
+    // }
 }
    
 
