--- a/src/style/tools.scss
+++ b/src/style/tools.scss
@@ -1,8 +1,9 @@
 .tools {
-
+    width: 97.5vw;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: fit-content;
     
     
 }
