--- a/src/style/tools.scss
+++ b/src/style/tools.scss
@@ -2,8 +2,9 @@
     width: 97.5vw;
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    height: fit-content;
+    // height: 15vh
+    // align-items: center;
+    // height: fit-content;
     
     
 }
