--- a/src/style/homescreen.scss
+++ b/src/style/homescreen.scss
@@ -22,7 +22,8 @@ body {
 
     .pic-render{
         background-color: red;
-        height: 87vh;
+        min-height: 50vh;
+        min-width: 50vw;
         
     }    
 
