--- a/src/style/homescreen.scss
+++ b/src/style/homescreen.scss
@@ -27,12 +27,11 @@ body {
         
     }    
 
-    // .work-station-wrapper {
-    //     background-color: red;
-    //     color: red;
-    //     height: 87vh;
-    //     width: 97vw;
-    // }
+    .buttons {
+        margin-top: 2em;
+        display: flex;
+        justify-content: space-around;
+    }
 
 }
    
