--- a/src/style/homescreen.scss
+++ b/src/style/homescreen.scss
@@ -23,7 +23,10 @@ body {
     .pic-render{
         background-color: red;
         min-height: 68vh;
-        min-width: 50vw;
+        
+        // .unsplash {
+        //     height: 68vh;
+        // }
         
     }    
 
