font change on button

--- a/src/style/homescreen.scss
+++ b/src/style/homescreen.scss
@@ -42,6 +42,7 @@ body {
             height: 30px;
             border: none;
             border-radius: 10px;
+            font-size: 1em;
         }
     }
 
