--- a/src/style/homescreen.scss
+++ b/src/style/homescreen.scss
@@ -4,6 +4,12 @@ html {
     min-height: -webkit-fill-available;
 }
 
+.imgs  {
+    &:active {
+        border: 4px solid blue;
+    }
+}
+
 body {
     margin: 0px;
     padding: 0px;
