--- a/src/style/homescreen.scss
+++ b/src/style/homescreen.scss
@@ -12,14 +12,7 @@ body {
     min-height: -webkit-fill-available;
 }
 
-// .form_container {
-//     height: 5vh;
-//     overflow: hidden;
-// }
-// .image_container {
-//     height: 63vh;
-//     overflow: auto;
-// }
+
 body { font-size: 16px; }
 input, select { font-size: 100%; }
 
@@ -61,6 +54,33 @@ input, select { font-size: 100%; }
     }
 
 }
+
+.container{
+    .row {
+        .col-md-4{
+            .imageList_container{
+                border-radius: 1px;
+                box-shadow: -1px 2px 34px -13px rgba(0,0,0,0.55);
+                text-align: left;
+                overflow: hidden;
+                .imageList_image{
+                    width: 100%;
+                    height: 200px;
+                }
+            }
+            .image_details{
+                background: #34495e;
+                button {
+                    width: 100%;
+                    border: 0;
+                    background-color: #2c3e50;
+                    color: #fff;
+                }
+            }
+        }
+    }
+}
+
    
 
 
