--- a/src/style/homescreen.scss
+++ b/src/style/homescreen.scss
@@ -56,8 +56,12 @@ input, select { font-size: 100%; }
 }
 
 .container{
-    .row {
+    .row {display: flex;
+        flex-direction: column;
+        align-items: center;
         .col-md-4{
+            width: 50%;
+            height: 50%;
             .imageList_container{
                 border-radius: 1px;
                 box-shadow: -1px 2px 34px -13px rgba(0,0,0,0.55);
