got rid of export and clipart buttons

--- a/src/style/homescreen.scss
+++ b/src/style/homescreen.scss
@@ -39,7 +39,7 @@ input, select { font-size: 100%; }
     .buttons {
         margin-top: 2em;
         display: flex;
-        justify-content: space-around;
+        justify-content: space-evenly;
 
         button {
             background: rgb(75,100,255);
