--- a/src/style/tools.scss
+++ b/src/style/tools.scss
@@ -1,7 +1,7 @@
 .tools {
     width: 97.5vw;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     // height: 15vh
     // align-items: center;
     // height: fit-content;
