--- a/src/style/homescreen.scss
+++ b/src/style/homescreen.scss
@@ -31,9 +31,7 @@ input, select { font-size: 100%; }
     .pic-render{
         
         min-height: 65vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        
     }    
 
     .buttons {
@@ -70,7 +68,9 @@ input, select { font-size: 100%; }
     .row {display: flex;
         flex-direction: column;
         align-items: center;
+        background-color: white;
         .col-md-4{
+            margin-top: 23px;
             width: 50%;
             height: 50%;
             .imageList_container{
@@ -148,5 +148,10 @@ img {
 }
 
 
-   
+.form_container {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
 
