styled search button

--- a/src/style/homescreen.scss
+++ b/src/style/homescreen.scss
@@ -160,3 +160,14 @@ img {
     margin-top: 20px;
 }
 
+form{
+    button{
+        border: none;
+    color: #969696;
+    background-color: pink;
+    margin-left: 1em;
+    height: 2em;
+    border-radius: 20px;
+    }
+}
+
