--- a/src/style/homescreen.scss
+++ b/src/style/homescreen.scss
@@ -166,7 +166,8 @@ form{
     color: #969696;
     background-color: pink;
     margin-left: 1em;
-    height: 2em;
+    width: 9em;
+    height: 4em;
     border-radius: 20px;
     }
 }
