--- a/src/style/homescreen.scss
+++ b/src/style/homescreen.scss
@@ -70,6 +70,8 @@ input, select { font-size: 100%; }
                 text-align: left;
                 overflow: hidden;
                 .imageList_image{
+                    padding-top: 0px;
+                    margin-left: 0px;
                     width: 100%;
                     height: 200px;
                 }
@@ -97,21 +99,21 @@ img {
     .pic-render{}
     .font-state-left {
         position: fixed;
-        top: 50px;
-        left: 25%;
+        top: 300px;
+        left: 5%;
         
     }
     .font-state-right {
         position: fixed;
-        top: 50px;
-        left: 75%;
+        top: 300px;
+        left: 80%;
         
     }
 
     .font-state-center {
         position: fixed;
-        top: 50px;
-        left: 50%;
+        top: 300px;
+        left: 45%;
         
     }
 
@@ -187,3 +189,10 @@ form{
     margin-top: 20px;
 }
 
+.pic-render{
+    img {
+        padding-top: 200px;
+        width: 100%;
+    height: 30.5vh;
+    }
+}
